removed code beforehand

--- a/In-class Activities/Introduction to Jupyter Notebook.ipynb
+++ b/In-class Activities/Introduction to Jupyter Notebook.ipynb
@@ -57,8 +57,7 @@
    "outputs": [],
    "source": [
     "# In Python, anything with a \"#\" in front of it is code annotation and is not read by the computer \n",
-    "# This print function below allows us to generate a message. \n",
-    "print('Nice Work!')"
+    "# Use the print function below to generate a message. \n"
    ]
   },
   {
@@ -112,11 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's play with numbers! \n",
-    "\n",
-    "# If you want an example, run this first\n",
-    "# 10 + 2\n",
-    "# After pressing the play button it should say \"12\" "
+    "# Let's play with numbers! \n"
    ]
   },
   {
@@ -179,49 +174,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "<class 'float'>\n",
-      "<class 'str'>\n",
-      "value of int 5 and float 3.5 is 8.5 and the type of variable 'a' is <class 'float'>\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 17\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue of int 5 and float 3.5 is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00ma\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m and the type of variable \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(a)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# However there are types that are NOT compatible with each other and will result in an error\u001b[39;00m\n\u001b[1;32m---> 17\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[43mx\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mz\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Here are examples of the types of Variables \n",
     "\n",
-    "x = 5\n",
-    "print(type(x))\n",
-    "\n",
-    "y = 3.5\n",
-    "print(type(y))\n",
-    " \n",
-    "z = \"10\"\n",
-    "print(type(z))\n",
-    "\n",
     "# Some types are compatible in operations\n",
-    "a = x + y\n",
-    "print(f\"value of int 5 and float 3.5 is {a} and the type of variable 'a' is {type(a)}\")\n",
     "\n",
-    "# However there are types that are NOT compatible with each other and will result in an error\n",
-    "a = x + z"
+    "# However there are types that are NOT compatible with each other and will result in an error"
    ]
   },
   {
@@ -233,26 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "<class 'float'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# A variable can change it's type for example \n",
-    "\n",
-    "a = 3\n",
-    "print(type(a))\n",
-    "\n",
-    "a = a + 4.5 \n",
-    "print(type(a))"
+    "# A variable can change it's type for example \n"
    ]
   },
   {
@@ -280,38 +226,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "float"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is an example of using both print and return to see datatypes of variables \n",
     "\n",
-    "x = 5 \n",
-    "y = 3 \n",
-    "z = x + y\n",
-    "\n",
-    "# I don't want to return type(z) yet, but I want to know the type of z as of now\n",
-    "print(type(z))\n",
-    "\n",
-    "z = z + 3.5 \n",
-    "\n",
-    "type(z)"
+    "# I don't want to return type(z) yet, but I want to know the type of z as of now"
    ]
   },
   {
@@ -352,9 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's find the average of a list of 4 numbers \n",
-    "a = (1 + 2 + 3 + 4) / 4\n",
-    "a"
+    "# Let's find the average of a list of 4 numbers "
    ]
   },
   {
@@ -396,10 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell!\"\n",
-    "our_list = [1, 2, 3, 4]\n",
-    "a = numpy.sum(our_list) / 4\n",
-    "a"
+    "# Run this cell!"
    ]
   },
   {
@@ -415,9 +329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell!\"\n",
-    "a = numpy.mean(our_list)\n",
-    "a"
+    "# Run this cell!"
    ]
   },
   {
@@ -433,9 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell!\"\n",
-    "a = numpy.std(our_list)\n",
-    "a"
+    "# Run this cell!"
    ]
   },
   {
@@ -455,10 +365,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run me to see what I output! \n",
-    "numpy.mean?\n",
-    "\n",
-    "numpy.mean(our_list)"
+    "# Output numpy.mean? to see what it says!"
    ]
   }
  ],
