fixed import error and hyperlinks

--- a/Assignments/Assignment 1/Assignment 1-checkpoint.ipynb
+++ b/Assignments/Assignment 1/Assignment 1-checkpoint.ipynb
@@ -71,7 +71,9 @@
    "source": [
     "### **Structure of Assignment**\n",
     "\n",
-    "- **TODO** add the contents of part 1 and 2 with links\n"
+    "We'll be utilizing concepts we have learned together through \n",
+    "- __[Statistics 1 - Frequency tables, distributions, & graphs](https://colab.research.google.com/github/Kar1na2/NEURO201/blob/main/In-class%20Activities/Statistics%201%20-%20Frequency%20tables%2C%20distributions%2C%20%26%20graphs.ipynb)__\n",
+    "- __[Statistics 2 - Measures of central tendency and dispersion-checkpoint](https://colab.research.google.com/github/Kar1na2/NEURO201/blob/main/In-class%20Activities/Statistics%202%20-%20Measures%20of%20central%20tendency%20and%20dispersion-checkpoint.ipynb)__"
    ]
   },
   {
@@ -100,10 +102,11 @@
    "outputs": [],
    "source": [
     "# This will ensure that the AllenSDK is installed\n",
-    "try: \n",
+    "try:\n",
     "    import allensdk\n",
     "    print('allensdk imported')\n",
     "except ImportError as e:\n",
+    "    !python -m pip install \"numpy==1.23.5\"\n",
     "    %pip install allensdk"
    ]
   },
@@ -180,7 +183,7 @@
    "source": [
     "Below, we'll import a common selection of packages that will help us analyze and plot our data. We'll also configure the plotting in our notebook.\n",
     "\n",
-    "> **Task [2 points]:** Time for you to write some code! Just like you did in the __[Introduction to Juypter Notebook](https://colab.research.google.com/github/nsankaran-usf/NEURO201/blob/main/In-class%20Activities/Introduction%20to%20Jupyter%20Notebook.ipynb)__, import the numpy module nicknamed as np. Add a print message at the end that says \"Packages imported!\" so that you know the code ran. Add your code underneath the appropriate coments below."
+    "> **Task [2 points]:** Time for you to write some code! Just like you did in the __[Introduction to Juypter Notebook](https://colab.research.google.com/github/Kar1na2/NEURO201/blob/main/In-class%20Activities/Introduction%20to%20Jupyter%20Notebook.ipynb)__, import the numpy module nicknamed as np. Add a print message at the end that says \"Packages imported!\" so that you know the code ran. Add your code underneath the appropriate coments below."
    ]
   },
   {
@@ -375,7 +378,7 @@
     "```\n",
     "Let's assign the data to a variable called \"df\" (short for data frame).\n",
     "\n",
-    "> **Task [2 points]:** In the code block below, add code to examine the shape of the dataset -i.e., to see how many rows and columns exist in the data. To do this, take a look at __[\"Step 1: Load the Dataset\" in the Introduction to Statistics: part 1](https://colab.research.google.com/github/nsankaran-usf/NEURO201/blob/main/In-class%20Activities/Intro%20to%20Statistics.ipynb#scrollTo=Part_1_Frequency_tables_distributions_and_scatter_plots)__ notebook."
+    "> **Task [2 points]:** In the code block below, add code to examine the shape of the dataset -i.e., to see how many rows and columns exist in the data. To do this, take a look at __[\"Step 1: Load the Dataset\" in Statistics 1 notebook](https://colab.research.google.com/github/Kar1na2/NEURO201/blob/main/In-class%20Activities/Statistics%201%20-%20Frequency%20tables%2C%20distributions%2C%20%26%20graphs.ipynb#scrollTo=_Step_1_Load_the_Dataset)__ notebook."
    ]
   },
   {
@@ -399,7 +402,7 @@
    "source": [
     "As you can see, our dataset contains 53 rows (corresponding to the 53 different neurons), and 11 columns. To see what the columns correspond to, let's examine the first 20 rows of the table.\n",
     "\n",
-    "> **Task [2 points]:** In the code block below, write code to display the first 20 rows of the data. Hint: Look at __[\"Step 2: View the first 20 rows\" in the Introduction to Statistics: part 1](https://colab.research.google.com/github/nsankaran-usf/NEURO201/blob/main/In-class%20Activities/Intro%20to%20Statistics.ipynb#scrollTo=Part_2_Measures_of_central_tendency_and_variability)__ notebook."
+    "> **Task [2 points]:** In the code block below, write code to display the first 20 rows of the data. Hint: Look at __[\"Step 2: View the first 20 rows\" in Statistics 1 notebook](https://colab.research.google.com/github/Kar1na2/NEURO201/blob/main/In-class%20Activities/Statistics%201%20-%20Frequency%20tables%2C%20distributions%2C%20%26%20graphs.ipynb#scrollTo=_Step_2_View_the_First_20_Rows)__ notebook."
    ]
   },
   {
@@ -436,7 +439,7 @@
     "\n",
     "First let’s examine the maximum distance of neurons’ axons/dendrites from soma. We’ll plot two different distributions on the same figure: one for spiny neurons (in blue), and another from aspiny neurons (in red). \n",
     "\n",
-    "> **Task [3 points]:** before running the code block below, add code that labels the x-axis of your plot as “Distance”, the y-axis as “Number of neurons”, and give your plot an a descriptive title. To remind yourself of the python commands for doing this, refer to the previous histogram plots we made in __[“Step 5: Very the bin size” in the Introduction to Statistics: part 1](https://colab.research.google.com/github/nsankaran-usf/NEURO201/blob/main/In-class%20Activities/Intro%20to%20Statistics.ipynb#scrollTo=_Step_5_Vary_the_Number_of_Bins)__"
+    "> **Task [3 points]:** before running the code block below, add code that labels the x-axis of your plot as “Distance”, the y-axis as “Number of neurons”, and give your plot an a descriptive title. To remind yourself of the python commands for doing this, refer to the previous histogram plots we made in __[“Step 5: Very the bin size” in Statistics 1 notebook](https://colab.research.google.com/github/Kar1na2/NEURO201/blob/main/In-class%20Activities/Statistics%201%20-%20Frequency%20tables%2C%20distributions%2C%20%26%20graphs.ipynb#scrollTo=_Step_5_Vary_the_Number_of_Bins)__"
    ]
   },
   {
@@ -479,7 +482,7 @@
    "source": [
     "##### **Calculate measures of central tendency and dispersion for distance** \n",
     "\n",
-    "Now that we have our two distributions, let's calculate some statistics! Refer to the \"Introduction to Statistics, part 2\" notebook we complete in lecture, and the section titled __[\"measures of central tendency and variability\"](https://colab.research.google.com/github/nsankaran-usf/NEURO201/blob/main/In-class%20Activities/Intro%20to%20Statistics%20Part%202.ipynb)__\n",
+    "Now that we have our two distributions, let's calculate some statistics! Refer to the \"Introduction to Statistics, part 2\" notebook we complete in lecture, and the section titled __[\"measures of central tendency and variability\"](https://colab.research.google.com/github/Kar1na2/NEURO201/blob/main/In-class%20Activities/Statistics%202%20-%20Measures%20of%20central%20tendency%20and%20dispersion-checkpoint.ipynb#scrollTo=_Measures_of_central_tendency_and_variability)__\n",
     "<br>\n",
     "\n",
     "Let's begin by calculating two measures of central tendency (mean & median)\n",
@@ -626,7 +629,7 @@
     "We might expect that the greater distance a neuron sends its axons/dendrites, the more branching or \"bifurcating\" occurs. Let's see if this is indeed true. Let's just focus on spiny neurons, as these are the most numerous in the dataset.\n",
     "<br>\n",
     "\n",
-    "> **Task [15 points]:** Below, generate a scatter plot that has “distance” on the x-axis and “number of bifurcations” on the y-axis. The variables “spiny_dist” and “spiny_nbifurc” have already been generated in the code blocks above. Refer to the __[“Introduction to statistics, part 1” notebook](https://colab.research.google.com/github/nsankaran-usf/NEURO201/blob/main/In-class%20Activities/Intro%20to%20Statistics.ipynb)__ to see how to generate a scatter plot. Make sure you give your plot axes labels and a title. "
+    "> **Task [15 points]:** Below, generate a scatter plot that has “distance” on the x-axis and “number of bifurcations” on the y-axis. The variables “spiny_dist” and “spiny_nbifurc” have already been generated in the code blocks above. Refer to the __[“Statistics 1 - Frequency tables, distributions, & graphs” notebook](https://colab.research.google.com/github/Kar1na2/NEURO201/blob/main/In-class%20Activities/Statistics%201%20-%20Frequency%20tables%2C%20distributions%2C%20%26%20graphs.ipynb#scrollTo=_Step_6_Scatter_Plot_of_Height_vs_Weight)__ to see how to generate a scatter plot. Make sure you give your plot axes labels and a title. "
    ]
   },
   {
