--- a/In-class Activities/In-class activity - Probability, the normal distribution, & z-scores in Python.ipynb
+++ b/In-class Activities/In-class activity - Probability, the normal distribution, & z-scores in Python.ipynb
@@ -26,13 +26,9 @@
    "outputs": [],
    "source": [
     "# 📦 Import libraries\n",
-    "\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Enable inline plotting for Jupyter notebooks\n",
-    "%matplotlib inline"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -53,10 +49,10 @@
    "outputs": [],
    "source": [
     "# Load dendritic_branches_layer3.csv\n",
-    "df = pd.read_csv(\"HeightWeight.csv\")\n",
+    "df_branching = pd.read_csv(\"csv files/dendritic_branches_layer3.csv\")\n",
     "\n",
     "# Display the first 20 rows\n",
-    "df.head(20)"
+    "df_branching.head(20)"
    ]
   },
   {
@@ -76,21 +72,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot the data listed under the \"Dendritic_branches\" column\n",
-    "# Define bin edges for height (in cm)\n",
-    "bin_edges = [50, 60, 70, 80, 90]\n",
-    "\n",
-    "\n",
-    "# Use pandas 'cut' function to group data\n",
-    "height_bins = pd.cut(df['Height(Inches)'], bins=bin_edges)\n",
-    "\n",
-    "\n",
-    "# Create frequency table\n",
-    "height_freq_table = height_bins.value_counts().sort_index()\n",
-    "\n",
-    "\n",
-    "# Display the frequency table\n",
-    "height_freq_table"
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.hist(df_branching['Dendritic_Branches'], bins=100, edgecolor='black')\n",
+    "plt.title(\"Distribution of dendritic branching\")\n",
+    "plt.xlabel(\"Branches\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.grid(True)\n",
+    "plt.show()"
    ]
   },
   {
@@ -221,7 +209,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.10.1",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -235,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
