changed read_csv to match google colab

--- a/In-class Activities/In-class activity - Probability, the normal distribution, & z-scores in Python.ipynb
+++ b/In-class Activities/In-class activity - Probability, the normal distribution, & z-scores in Python.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "# Load dendritic_branches_layer3.csv\n",
-    "df_branching = pd.read_csv(\"csv files/dendritic_branches_layer3.csv\")\n",
+    "df_branching = pd.read_csv(\"dendritic_branches_layer3.csv\")\n",
     "\n",
     "# Display the first 20 rows\n",
     "df_branching.head(20)"
