--- a/In-class Activities/In-class activity - Probability, the normal distribution, & z-scores in Python.ipynb
+++ b/In-class Activities/In-class activity - Probability, the normal distribution, & z-scores in Python.ipynb
@@ -133,9 +133,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First let's find the mean and standard deviation of our distribution \n",
+    "# First let's find the mean and standard deviation of our distribution\n",
+    "mean = np.mean(df_branching['Dendritic_Branches'])\n",
+    "std = np.std(df_branching['Dendritic_Branches'])\n",
     "\n",
-    "# Now let's use it to calculate the z-score"
+    "\n",
+    "print(f\"mean: {mean} std: {std}\")\n",
+    "\n",
+    "\n",
+    "# Now let's use it to calculate the z-score\n",
+    "z_score = (45 - mean) / std\n",
+    "print(f\"z_score: {z_score}\")"
    ]
   },
   {
@@ -188,7 +196,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Since the closest to 80th percentile is 0.8023 the z-score we're going to be using will be 0.85"
+    "# Since the closest to 80th percentile is 0.8023 the z-score we're going to be using will be 0.85\n",
+    "x = mean + (0.85)*(std)\n",
+    "print(f\"X: {x}\")"
    ]
   },
   {
@@ -223,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
